added basic html and scss

--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>To Do List</title>
 		<link rel="stylesheet" href="src/scss/main.scss" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,400;1,700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
+		<section id="container">
+			<h1 id="title">To Do List</h1>
+
+			<h2 id="toDo">To Do:</h2>
+
+			<ul id="toDoList">
+				<li>kasta sopor</li>
+				<li>diska</li>
+				<li>dammsuga</li>
+				<li>moppa</li>
+				<li>hänga tvätt</li>
+			</ul>
+
+			<h2 id="completed">Completed:</h2>
+
+			<ul id="completedList"></ul>
+		</section>
+
 		<script src="src/js/main.js" type="module"></script>
 	</body>
 </html>
