added: clicking on li in To Do List, will remove it and add it to the completed list instead

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 			<ul id="completedList"></ul>
 		</section>
 
-		<script src="src/js/main.js" type="module"></script>
+		<script src="src/js/main.js"></script>
 	</body>
 </html>
