--- a/index.html
+++ b/index.html
@@ -14,24 +14,37 @@
 		/>
 	</head>
 	<body>
-		<section id="container">
-			<h1 id="title">To Do List</h1>
+		<section class="header">
+			<h3 class="header__title">MY TODO LIST:</h3>
 
-			<h2 id="toDo">To Do:</h2>
-
-			<ul id="toDoList">
-				<li>kasta sopor</li>
-				<li>diska</li>
-				<li>dammsuga</li>
-				<li>moppa</li>
-				<li>hänga tvätt</li>
-			</ul>
-
-			<h2 id="completed">Completed:</h2>
-
-			<ul id="completedList"></ul>
+			<form class="header__form" id="todo-form">
+				<h4 class="header__desc">What's on your todo list?</h4>
+				<input
+					type="text"
+					name="content"
+					id="content"
+					placeholder="e.g. do the dishes"
+				/>
+				<article class="header__submit">
+					<input type="submit" value="Add todo" />
+				</article>
+			</form>
 		</section>
 
-		<script src="src/js/main.js"></script>
+		<section class="todo">
+			<h3 class="todo__title">TODO LIST</h3>
+			<article class="todo__list">
+				<article class="todo__content">
+					<ul id="u-list">
+						<li>GET MILK</li>
+						<li>DO THE DISHES</li>
+						<li>CLEAN THE ROOM</li>
+						<li>TAKE OUT THE TRASH</li>
+						<li>BOOK A DENTIST APPOINTMENT</li>
+					</ul>
+				</article>
+			</article>
+		</section>
+		<script src="src/js/main.js" defer></script>
 	</body>
 </html>
