added some localstorage stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h3 class="header__title">MY TODO LIST:</h3>
 
 			<form class="header__form" id="todo-form">
-				<h4 class="header__desc">What's on your todo list?</h4>
+				<h4 class="header__desc">What do you need to do?</h4>
 				<input
 					type="text"
 					name="content"
@@ -32,7 +32,7 @@
 		</section>
 
 		<section class="todo">
-			<h3 class="todo__title">TODO LIST</h3>
+			<h3 class="todo__title">TODO LIST:</h3>
 			<article class="todo__list">
 				<article class="todo__content">
 					<ul id="u-list">
