changed js code and added delete button

--- a/index.html
+++ b/index.html
@@ -35,13 +35,7 @@
 			<h3 class="todo__title">TODO LIST:</h3>
 			<article class="todo__list">
 				<article class="todo__content">
-					<ul id="u-list">
-						<li>GET MILK</li>
-						<li>DO THE DISHES</li>
-						<li>CLEAN THE ROOM</li>
-						<li>TAKE OUT THE TRASH</li>
-						<li>BOOK A DENTIST APPOINTMENT</li>
-					</ul>
+					<ul id="u-list"></ul>
 				</article>
 			</article>
 		</section>
